# docs/swagger.json
@@ -14,6 +14,35 @@
         "version": "1.0"
     },
     "paths": {
+        "/add-example-datasources": {
+            "post": {
+                "description": "Create example datasources",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dev"
+                ],
+                "summary": "Create example datasources",
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Error creating datasources",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/datasource": {
             "post": {
                 "description": "Create datasource",
@@ -253,7 +282,7 @@
             "type": "object",
             "properties": {
                 "available": {
-                    "type": "string"
+                    "type": "boolean"
                 },
                 "did": {
                     "type": "string"
